# rag-chatbot

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: react-agent.ipynb  vector_db.ipynb  workflow-test.ipynb
setup/: dynamoDB.py  vector_db_setup.py
src/: __init__.py
src/.archive/: chat_app.py  clients.py  news_search.py  prompt_loader.py
src/clients/: __init__.py  dynamodb.py  pinecone.py  voyage.py
src/config/: settings.py
src/graph/: workflow.py
src/nodes/: answerer.py  generator.py  rewriter.py
src/prompts/: templates.py
src/tools/: news_search.py
src/utils/: chat_stream.py  message_trimmer.py
